# primeforge

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  conda.yml  release.yml
conda/recipe/: meta.yaml
data/editors/: spcas9_pe2.json  spcas9_pe3.json
docs/: api.md  design_rules.md  index.md
primeforge-core/: CMakeLists.txt
primeforge-core/benchmarks/: CMakeLists.txt  bench_pam.cpp
primeforge-core/include/primeforge/: design.hpp  device.hpp  pam.hpp  types.hpp  utils.hpp
primeforge-core/src/: design.cpp  device.cpp  pam.cpp  utils.cpp
primeforge-core/src/gpu/: pam_cuda.cu
primeforge-core/tests/: CMakeLists.txt  test_design_basic.cpp  test_e2e.cpp  test_pam.cpp
python/: CMakeLists.txt  pyproject.toml  requirements-dev.txt
python/primeedit/: __init__.py  api.py  types.py
python/primeforge/: __init__.py
python/primeforge_bindings/: CMakeLists.txt  bindings.cpp
python/tests/: test_api_basic.py  test_device.py
