[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "primeforge"
version = "0.1.0"
description = "Deterministic prime editing design core with optional CUDA backends"
authors = [{ name = "Primeforge Contributors" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/omniscode/primeforge"

[tool.setuptools.packages.find]
where = ["primeforge"]
